	name of date narrowing function.
	(planner-delicious-posts-match-all): Change name of date narrowing
	function.
	(planner-delicious-append-posts-match-date): New command to append
	posts matching a date regexp.
	(planner-delicious-rewrite-posts-match-date): New command to
	replace current delicious section with posts matching a date
	regexp.

	* delicioapi.el (delicious-send-request): Fixed bug reported by
	Gunnar Wrobel that prevented things from working with Squid (and
	probably other proxies too).

2005-08-09  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-search-delete-tags): Replaced ugly
	substring hack with something better.

2005-08-08  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-post-matching-hash): Forgot to make the
	OFFLINE argument optional.
	(delicious-search-who-else): Changed to use the url?url form,
	because Joshua says we can't rely on the md5 hash.
	(delicious-read-time-string): Use the current time if no time
	string is entered. Didn't I do this before?
	(delicious-complete-tags): Forgot to respect the offline argument
	when building the tags list.
	(delicious-build-tags-list): Forgot here too.
	(delicious-save-buffer): Bury the buffer here, so we don't have to
	do it twenty other places.
	(delicious-post-cache): Use ASSOC instead of ELT; safer when then
	list structure changes a bit.

	* delicioapi.el (delicious-api-post): Oops, I was escaping all the
	fields but the URL. Escape the URL, so addresses with ampersands
	and things in them will work.

	* delicious.el (delicious-edit-post-locally): New internal
	function to update specific fields in a local copy of a post.
	(delicious-post): New NOLOCAL argument to stop local addition of
	posts. Needed to prevent duplication when we are editing posts in
	Delicious Search mode.
	(delicious-complete-tags): Ugly hack to remove trailing space on
	tags, until I get time to rewrite this loop.
	(delicious-search-delete-tags): New function to delete tags from a